# Granite-ASI-Classification

./: .gitattributes  .gitignore  LICENSE  MLGranite Source References.txt  README.md  SCB-Mesozoic-Granite.xls  check_setup.py  pyproject.toml  requirement.txt  requirements.txt  run_all.py
Code/A_Data_Preprocessing/: 01_foldwise_preprocessing_and_ratio_feature_construction.ipynb  02_foldwise_normality_test.ipynb
Code/B_Feature_Correlation_and_Selection/: 03_foldwise_spearman_correlation_analysis.ipynb  04_foldwise_correlation_clustering_champion_selection_rho_sensitivity.ipynb  05_stable_cluster_champions_and_novel_ratio_candidates.ipynb
Code/C_Novel_Ratio_Analysis/: 06_stable_novel_ratio_group_contribution_experiment.ipynb  07_stable_novel_ratio_class_distribution_and_statistical_tests.ipynb
Code/D_Classifiers/: ET.ipynb  GBDT.ipynb  KNN.ipynb  LR.ipynb  MLP.ipynb  RF.ipynb  SVM.ipynb  summarize_all_classifiers.ipynb
Code/E_Model_Sensitivity_and_Baselines/: 09_class_weight_sensitivity_analysis.ipynb  10_traditional_diagram_baseline_comparison.ipynb
Code/F_SHAP_Interpretation/: 11_final_model_shap_interpretation.ipynb
Data/: SCB-Mesozoic-Granite.xls
scripts/: 00_data_audit.py  01_preprocess.py  02_normality.py  03_correlations.py  04_select_cluster_champions.py  05_summarize_stability.py  06_feature_contribution.py  07_exploratory_ratio_statistics.py  08_model_comparison.py  09_class_weight_sensitivity.py  10_traditional_baseline.py  11_final_shap.py  12_generate_summary_figures.py  check_figure_resolution.py
src/granite_ml/: __init__.py  config.py  io.py  (+5 more)
