[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "granite-asi-classification"
version = "0.1.0"
description = "Leakage-aware machine-learning pipeline for A-, S-, and I-type granite classification"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9,<3.13"
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "scipy>=1.10,<2",
  "matplotlib>=3.7,<4",
  "scikit-learn>=1.3,<2",
  "openpyxl>=3.1,<4",
  "xlrd>=2.0,<3",
  "xgboost>=2.0,<4",
  "shap>=0.44,<1",
  "Pillow>=9,<13",
]

[project.urls]
Repository = "https://github.com/Fresh-DK/Granite-ASI-Classification"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
